Actualizacion de Horarios

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-remote_theme: "owasp/www--site-theme"
+remote_theme: "owasp/www-event-2020-latam-at-home"
 plugins:
  - jekyll-include-cache-0.2.0
+repository: OWASP/www-event-2020-latam-at-home
